# barricade-blitz

./: Makefile  README.md  compile_commands.json  imgui.ini
.cache/clangd/index/: entity.hpp.488D7E54BC943795.idx  entity_impl.cc.2A47F35A8E9276D1.idx  entity_manager.hpp.5272F9D484F1BECB.idx  entity_manager_impl.cc.496B1ABD4C0A5D81.idx  game.hpp.758D226584BB256D.idx  game_impl.cc.E11F63463CE83168.idx  hud.hpp.608BDD97BDF80F0B.idx  imconfig.h.A2D89852DB2E054D.idx  imgui.cpp.81674A535E9EAA53.idx  imgui.h.B816E6B9E6F6C1F0.idx  imgui_draw.cpp.4C48428029F93475.idx  imgui_impl_sdl2.cpp.960655EF25B9E74C.idx  imgui_impl_sdl2.h.008F61CE520D1574.idx  imgui_impl_sdlrenderer2.cpp.8FF5AD9C7BC7331B.idx  imgui_impl_sdlrenderer2.h.2A57E90E8567B4DF.idx  imgui_internal.h.AD0F8D5368CDFDF5.idx  imgui_tables.cpp.E2742F5AD7336CED.idx  imgui_widgets.cpp.CF1DD5C220263FA9.idx  imstb_rectpack.h.FE35022F59D8930E.idx  imstb_textedit.h.59714C84CEC1BF9E.idx  imstb_truetype.h.88B797DDC9BD6A30.idx  main.cc.7A73331E0AECFBBC.idx  menu.hpp.141BFF2A3AF163E1.idx  screen.hpp.AFA0935FCC52A884.idx  sound.hpp.70EB27EE44F24057.idx  (+1 more)
imgui-static/: CMakeLists.txt
src/: main.cc  texture.hpp
src/entity/: entity.hpp  entity_impl.cc
src/entity_manager/: entity_manager.hpp  entity_manager_impl.cc
src/game/: entity_manager.hpp  game.hpp  game_impl.cc  texture.hpp
src/hud/: hud.hpp
src/menu/: menu.hpp
src/net/: client.hpp  common.hpp  net_client.hpp  net_common.hpp  net_server.hpp
src/networking/: net_common.hpp  net_server.hpp
src/screen/: screen.hpp
src/sound/: sound.hpp
(+9 files in other folders)
